--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     mongo-app:
         # container_name: mongo
         image: mongo
+        volumes: 
+            - ./mongo-volume:/data/db
         ports: 
             - '27017:27017'
     predictor:
