fixed database connection problem

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,5 @@ services:
         build: './flask predictor model'
         ports: 
             - "5000:5000"
+        links:  
+            - mongo-app
